TestRepo2/src/objects/Sales_Volume__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Volumes</relationshipLabel>
        <relationshipName>Sales_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_List_Rep_CT_w_ROM_and_ON__c</fullName>
        <label>Acct List Rep CT w ROM and ON</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batf_Volume_12_Mo_TY__c</fullName>
        <label>Batf Volume 12 Mo TY</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batf_Volume_12_Mo_TY_vs_LY_Chg__c</fullName>
        <label>Batf Volume 12 Mo TY vs LY % Chg</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batf_Volume_3_Mo_TY_vs_LY_Chg__c</fullName>
        <label>Batf Volume 3 Mo TY vs LY % Chg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batf_Volume_6_Mo_TY_vs_LY_Chg__c</fullName>
        <label>Batf Volume 6 Mo TY vs LY % Chg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batf_Volume_FYTD_TY_vs_LY_Chg__c</fullName>
        <label>Batf Volume FYTD TY vs LY % Chg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batf_Volume_TY_vs_LY_Chg__c</fullName>
        <label>Batf Volume TY vs LY % Chg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Brcat_Fin_Plan_Brand__c</fullName>
        <label>Brcat Fin Plan Brand</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generic_Brand__c</fullName>
        <label>Generic Brand</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Brand__c</fullName>
        <label>Individual Brand</label>
        <length>66</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_End__c</fullName>
        <label>Month End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA15_RT_ID__c</fullName>
        <formula>IF(RecordTypeId = &apos;012A00000012WgS&apos;, &apos;012i0000000ewRaAAI&apos;, 
 IF(RecordTypeId = &apos;012A00000012WgT&apos;, &apos;012i0000000ewRbAAI&apos;,
 IF(RecordTypeId = &apos;012A00000012WgU&apos;, &apos;012i0000000ewRcAAI&apos;,
 IF(RecordTypeId = &apos;012A00000012WgV&apos;, &apos;012i0000000ewRdAAI&apos;, &apos;NA&apos;)
)
)
)</formula>
        <label>NA15 RT ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_12M_Chg_vs_YA__c</fullName>
        <label>State 12M % Chg vs YA</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Batf_Volume_12_Mo_TY__c</fullName>
        <label>State Batf Volume 12 Mo TY</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Distro__c</fullName>
        <label>State % Distro</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_End__c</fullName>
        <label>Year End</label>
        <type>Date</type>
    </fields>
    <label>Sales Volume</label>
    <listViews>
        <fullName>X1A</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>Month_End__c</columns>
        <filterScope>Everything</filterScope>
        <label>1A</label>
    </listViews>
    <listViews>
        <fullName>X3A</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Individual_Brand__c</columns>
        <columns>State_12M_Chg_vs_YA__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Month_End__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Volume__c.X3A_12_Month_Volume</value>
        </filters>
        <label>3A</label>
    </listViews>
    <listViews>
        <fullName>X3M</fullName>
        <columns>NAME</columns>
        <columns>Acct_List_Rep_CT_w_ROM_and_ON__c</columns>
        <columns>Batf_Volume_12_Mo_TY_vs_LY_Chg__c</columns>
        <columns>Batf_Volume_3_Mo_TY_vs_LY_Chg__c</columns>
        <columns>Batf_Volume_6_Mo_TY_vs_LY_Chg__c</columns>
        <columns>Batf_Volume_FYTD_TY_vs_LY_Chg__c</columns>
        <columns>Batf_Volume_TY_vs_LY_Chg__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Volume__c.X3M_Territory_Growth</value>
        </filters>
        <label>3M</label>
    </listViews>
    <listViews>
        <fullName>x2A</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Division__c</columns>
        <columns>Individual_Brand__c</columns>
        <columns>Batf_Volume_12_Mo_TY_vs_LY_Chg__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Month_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sales_Volume__c.X2A_Monthly_Volume</value>
        </filters>
        <label>2A</label>
    </listViews>
    <nameField>
        <displayFormat>SV-{0000000}</displayFormat>
        <label>Sales Volume Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Volumes</pluralLabel>
    <recordTypes>
        <fullName>X1A_Growth_Opportunities</fullName>
        <active>true</active>
        <label>1A - Growth Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2A_Monthly_Volume</fullName>
        <active>true</active>
        <label>2A - Monthly Volume</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3A_12_Month_Volume</fullName>
        <active>true</active>
        <label>3A - 12 Month Volume</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3M_Territory_Growth</fullName>
        <active>true</active>
        <label>3M - Territory Growth</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>